--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -65,6 +65,12 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
+.footer,
+.pagination {
+  clear: both;
+  text-align: center;
+}
+
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
   color: #268bd2;
